[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Fonts/menu_title_font.tres" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Art/UI/ui_game_menu_base.png" type="Texture" id=2]
[ext_resource path="res://Assets/Art/UI/ui_game_menu_button_base.png" type="Texture" id=3]
[ext_resource path="res://Assets/Art/UI/ui_game_menu_button_clicked.png" type="Texture" id=4]
[ext_resource path="res://UI/MainMenuSelection.gd" type="Script" id=5]
[ext_resource path="res://Assets/Sounds/menu_select.ogg" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=1]
size = 30
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 24
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = -15
font_data = ExtResource( 1 )

[node name="GameMenu" type="Control"]
pause_mode = 2
margin_right = 384.0
margin_bottom = 400.0
rect_min_size = Vector2( 220, 50 )
size_flags_horizontal = 4
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu_Base" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 256.0
rect_min_size = Vector2( 384, 656 )
size_flags_horizontal = 2
size_flags_vertical = 2
texture = ExtResource( 2 )
region_rect = Rect2( -4.34294, -3.10542, 326.486, 325.459 )
patch_margin_left = 40
patch_margin_top = 40
patch_margin_right = 40
patch_margin_bottom = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuStuff" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_right = -32.0
custom_constants/separation = 29
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameMenuTitle" type="Label" parent="MenuStuff"]
margin_right = 320.0
margin_bottom = 84.0
custom_fonts/font = SubResource( 1 )
text = "WELCOME!"
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="MenuStuff"]
margin_top = 113.0
margin_right = 320.0
margin_bottom = 133.0
rect_min_size = Vector2( 0, 20 )

[node name="NewGame" type="TextureButton" parent="MenuStuff"]
margin_top = 162.0
margin_right = 320.0
margin_bottom = 287.0
size_flags_horizontal = 5
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )

[node name="Label" type="Label" parent="MenuStuff/NewGame"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
text = "NEW GAME"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="TextureButton" parent="MenuStuff"]
margin_top = 316.0
margin_right = 320.0
margin_bottom = 441.0
size_flags_horizontal = 5
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )

[node name="Label" type="Label" parent="MenuStuff/Continue"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
text = "CONTINUE
(FROM MAX)"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="TextureButton" parent="MenuStuff"]
margin_top = 470.0
margin_right = 320.0
margin_bottom = 595.0
size_flags_horizontal = 5
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )

[node name="Label" type="Label" parent="MenuStuff/ExitButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
text = "EXIT GAME"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -10.0

[connection signal="pressed" from="MenuStuff/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="MenuStuff/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="MenuStuff/ExitButton" to="." method="_on_ExitButton_pressed"]
